# field_robot

./: .gitignore  README.md  bridge.bash  buildAndLaunchMainWorkspace.sh  robot.bash  ros1rob.bash  spawner.bash  start.bash
arduino_ws/field_robot_balance/: I2C.ino  band_stop.ino  defs.h  field_robot_balance.ino  hover_serial.ino  pid_control.ino
arduino_ws/libraries/ros_lib/field_robot/: Blobs.h  Pixel.h
catkin_ws/src/Virtual_FRE/virtual_maize_field/launch/: robot_spawner.launch
catkin_ws/src/Virtual_FRE/virtual_maize_field/map/: map.csv
catkin_ws/src/Virtual_FRE/virtual_maize_field/worlds/: generated.world
catkin_ws/src/Virtual_Field_Robot_Event_old/jackal_fre/jackal_description_fre/launch/: description.launch
deprecated_folder/: navigation_nav2.launch.py
deprecated_stuff/: _navigation.launch.py  _navigation_parameters.yaml  _service_in_field.cpp  nav2_bt_config_old.xml
dev_ws/: Dockerfile  docker-compose.yml  profile-4.ovpn  rebuild.sh  rebuild_override.sh  remove_build.sh
dev_ws/src/: information.txt
dev_ws/src/field-robot/: package.xml  setup.cfg  setup.py
dev_ws/src/field-robot/field_robot/: robot_spawner.py
dev_ws/src/field-robot/launch/: robot_state_publisher.launch.py  robot_state_publisher.launch.xml  simulation.launch.py  simulation.launch.xml
dev_ws/src/field-robot/models/: common_properties.xacro  turtlebot3_burger_for_pumpkin.urdf.xacro
dev_ws/src/field-robot/models/pumpkin/: model.sdf
dev_ws/src/field-robot/models/turtlebot3_burger/: model.sdf
dev_ws/src/field-robot/robot_description/old/: turtlebot3_burger_2.urdf
dev_ws/src/field-robot/robot_description/tb3/: turtlebot3_burger_for_pumpkin.urdf.xacro
dev_ws/src/field-robot/worlds/: burger.model  field_with_robot.world
dev_ws/src/field_robot/: CMakeLists.txt  default.rviz  package.xml  rviz2_configuration.rviz  setup.cfg  setup.py
dev_ws/src/field_robot/action/: ComputeBasedGoalAction.action  ComputeGoalAction.action  ConditionAction.action  EmptySpaceFollower.action  HeadlandTurn.action  RobotPoseUpdateAction.action  TurnInformationAction.action  empty_space_follower.action
dev_ws/src/field_robot/config/: _mapping.yaml  ekf.yaml  mapping.yaml  nav2_parameters.yaml  nav2_params.yaml  navigation_bt.xml  navigation_parameters.yaml  odometry.yaml  robot_localization_ekf.yaml
dev_ws/src/field_robot/config/ai_models/image_path_finder_ai/: keras_metadata.pb  saved_model.pb
dev_ws/src/field_robot/config/ai_models/image_path_finder_ai/variables/: variables.data-00000-of-00001  variables.index
dev_ws/src/field_robot/field_robot/: empty_space_follower.py  notes_blob_detection.txt  notes_camera_to_separate_point_cloud.txt  point_cloud2_from_camera.py  robot_spawner.py
dev_ws/src/field_robot/include/field_robot/: plugins.h
dev_ws/src/field_robot/launch/: bringup.launch.py  bringup_simulation.launch.py  mapping.launch.py  mapping.py  navigation.launch.py  navigation.py  navigation_nav2.launch.py  navigation_servers.launch.py  odometry.launch.py  operating_services.launch.py  robot_state_publisher.launch.py  robot_state_publisher.launch.xml  sensor_processing.launch.py  simulation.launch.py  simulation.launch.py.deprecated
dev_ws/src/field_robot/models/pumpkin/: model.config  model.sdf
dev_ws/src/field_robot/models/robot/: model.config  model.sdf  qwertz.sdf  robot.urdf
dev_ws/src/field_robot/models/world/: model.config  model.sdf
dev_ws/src/field_robot/models/worlds/: main.sdf  main.world
dev_ws/src/field_robot/robot_description/tb3/: turtlebot3_burger_for_pumpkin.gazebo.xacro  turtlebot3_burger_for_pumpkin.urdf.xacro
dev_ws/src/field_robot/ros_bridge/: 1.sh  2.sh
dev_ws/src/field_robot/scripts/: AI_data_generator.py  _headland_turn.py  demo_image_publisher.py  demo_impage_publisher.py  empty_space_follower.py  empty_space_follower_two.py  headland_turn.py  image_path_finder_ai.py  robot_spawner.py  service_in_row.py  teleop.py  wheel_odometry.py
dev_ws/src/field_robot/service/: BTNode.srv
dev_ws/src/field_robot/src/: navigation.cpp  point_cloud_fusion.cpp  point_cloud_generator.cpp
dev_ws/src/field_robot/src/navigation/: navigation_bt.cpp
dev_ws/src/field_robot/src/navigation/action_servers/action/: compute_goal_headland.cpp  compute_goal_headland_drive_server.cpp  compute_goal_in_row_server.cpp  compute_goal_leaving_row_server.cpp  publish_turn_information_server.cpp
dev_ws/src/field_robot/src/navigation/action_servers/condition/: completed_leaving_row_turn_action.cpp  front_empty_node_server.cpp  new_goal_computable_headland_drive_server.cpp
dev_ws/src/field_robot/src/navigation/bt_plugins/action/: compute_based_goals.cpp  compute_goals.cpp  store_turn_information_node.cpp
dev_ws/src/field_robot/src/navigation/bt_plugins/condition/: finished_headland_drive_node.cpp  new_goal_computable_headland_drive_node.cpp  simple_check_nodes.cpp
dev_ws/src/field_robot/src/navigation/bt_plugins/control/: continuous_sequency_node.cpp  indefinete_repeat_node.cpp  parallel_check_node.cpp
dev_ws/src/field_robot/worlds/: field_with_robot.world  generated.world  main.world  reduced.world
dev_ws/src/virtual_maize_field/: setup.py
dev_ws/src/virtual_maize_field/launch/: simulation.launch.py
dev_ws/src/virtual_maize_field/models/robot/: robot.urdf
dev_ws/src/virtual_maize_field/virtual_maize_field/: generate_ai_pictures.py  generate_world.py  robot_delete.py  robot_spawner.py  save_img.py  start.bash  start.sh
field_robot_mcu/: platformio.ini
hoverboard_ws/: platformio.ini
hoverboard_ws/Arduino/hoverserial/: hoverserial.ino
hoverboard_ws/Inc/: config.h
hoverboard_ws/Src/: bldc.c  comms.c  main.c
hoverboard_ws/src/: hallinterrupts.c
mcu_ws/: platformio.ini
mcu_ws/src/: main.cpp
ros_bridge/: terminal_two.sh
trash/Virtual_Field_Robot_Event_old/jackal_fre/jackal_description_fre/urdf/: accessories.urdf.xacro
trash/Virtual_Field_Robot_Event_old/virtual_maize_field/launch/: jackal_simulation.launch
