<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>field_robot</name>
  <version>0.0.1</version>
  <description>This is the ROS2 code for the field_robot made mainly by Simon Sure and Erwin Kose.</description>
  <maintainer email="info@simonsure.com">Simon Sure</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>std_msgs</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!--<gazebo_ros gazebo_media_path="${prefix}/media"/>
    <gazebo_ros gazebo_resource_path="{prefix}/media"/>
    <gazebo_ros gazebo_file_path="${prefix}/media"/>-->
  </export>
</package>
